--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "json-server --watch db/todos.json -p 5000"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
